[package]
name = "sayit"
authors = ["voidfemme"]
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
clipboard = "0.5.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["json"] }
rodio = "0.18.0"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
